--- a/.github/workflows/ci-php.yml
+++ b/.github/workflows/ci-php.yml
@@ -47,6 +47,9 @@ jobs:
           DB_PORT: 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+        outputs:
+          NOTICE_SLACK: ${{ steps.notice-slack.outputs.NOTICE_SLACK }}
+
     steps:
       - uses: actions/checkout@v2
       - name: cache composer
