--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "port": 9001,
             "pathMappings": {
-                "/var/www/html": "/server"
+                "/var/www/html": "${workspaceRoot}/server/"
             }
         }
     ]
