--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,23 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@types/webpack-env": "^1.16.2",
+        "@vue/compiler-sfc": "^3.2.6",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.0-beta.17",
+        "laravel-mix-vue3": "^0.7.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "ts-loader": "^9.2.5",
+        "typescript": "^4.3.5",
+        "vue": "^3.2.6",
+        "vue-loader": "^16.5.0",
+        "vue-template-compiler": "^2.6.12"
     }
 }
